# NekoImageGallery.App

./: .dockerignore  .eslintrc.cjs  .gitlab-ci.yml  .prettierrc.yml  Dockerfile  README.md  entrypoint.sh  eslint.config.mjs  index.html  package.json  readme_cn.md  tsconfig.json  vite.config.ts
.github/workflows/: prod.yml
env/: .env  .env.example
misc/: logo.psd
python-package/: .gitignore  README.md  pyproject.toml
python-package/src/neko_image_gallery_app/: __init__.py  asgi.py
src/: environment.ts  main.tsx
src/Assets/Icons/: readme.md
src/Components/: AdvancedQueryForm.tsx  AlertSnack.tsx  ApiInfo.ts  App.tsx  AppNav.tsx  AuthenticationDialog.tsx  Contexts.ts  FancyBoxWrapper.tsx  FilterForm.tsx  Home.tsx  ImageGallery.tsx  ImageOperationMenu.tsx  ImageQueryForm.tsx  LabelledSwitch.tsx  QueryArea.tsx  SearchHistoryList.tsx  SettingsDialog.tsx  SettingsModal.tsx  StrictInputs.tsx  TextQueryForm.tsx  UploadDialog.tsx
src/Hooks/: useAlertSnack.ts  useFileDropper.ts
src/Models/: AdminModels.ts  AdvancedSearchModel.ts  ApiResponse.ts  AppSettings.ts  HomeApiResponse.ts  Image.ts  MixedSearchModel.ts  SearchApiResponse.ts  SearchFilterOptions.ts  SearchQuery.ts  SearchResult.ts  UploadTaskModel.ts
src/Services/: AdminApi.ts  Base.ts  HomeApi.ts  SearchQuery.ts  StaticFiles.ts  UploadService.ts  WelcomeApi.ts
src/Styles/: index.css
src/Utils/: Base64Utils.ts  Clipboard.ts  FancyboxUtils.ts  FileHashing.ts  ImageOps.ts  StringUtils.ts  SystemDialog.ts
