[project]
name = "neko-image-gallery-app"
version = "0.1.0"
description = "A web-based image gallery app and dashboard for Neko Image Gallery."
readme = "README.md"
authors = [
    { name = "EdgeNeko", email = "edgeneko@aiursoft.com" }
]
requires-python = ">=3.10"
dependencies = [
    "starlette>=0.47.2",
]

[project.scripts]
neko-image-gallery-app = "neko_image_gallery_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "uvicorn>=0.35.0",
]
[tool.hatch.build.targets.sdist]
artifacts = [
  "src/neko_image_gallery_app/static/**/*",
  "src/neko_image_gallery_app/static/*"
]