[project]
name = "neko-image-gallery-app"
version = "0.1.0"
description = "A web-based image gallery app and dashboard for Neko Image Gallery."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "EdgeNeko", email = "edgeneko@aiursoft.com" }
]
requires-python = ">=3.10"
dependencies = [
    "starlette>=0.47.2",
]
keywords = ["image", "gallery", "web", "frontend", "static", "neko"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Multimedia :: Graphics :: Viewers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/NekoImageGallery/NekoImageGallery.App"
Repository = "https://github.com/NekoImageGallery/NekoImageGallery.App"
Issues = "https://github.com/NekoImageGallery/NekoImageGallery.App/issues"
Documentation = "https://github.com/NekoImageGallery/NekoImageGallery.App/blob/main/README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "uvicorn>=0.35.0",
]
[tool.hatch.build.targets.sdist]
artifacts = [
  "src/neko_image_gallery_app/static/**/*",
  "src/neko_image_gallery_app/static/*"
]